--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -1,231 +1,225 @@
 /* Navbar Styling */
-.logo{
-    text-align: center;
-    font-size: 3rem;
-    letter-spacing: 4px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-   
+.logo {
+  text-align: center;
+  font-size: 3rem;
+  letter-spacing: 4px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-.logo h2{
-    font-weight: 500;
+.logo h2 {
+  font-weight: 500;
 }
-.navlinks ul{ 
-    list-style: none;
-    display:flex;
-    justify-content: center;
-    
+.navlinks ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
 }
 
-.navlinks li{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    border-right: solid green  ;
-    padding: 0 5px;
-    margin: 0 5px 10px 10px;
-    
-
-
+.navlinks li {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  border-right: solid green;
+  padding: 0 5px;
+  margin: 0 5px 10px 10px;
 }
-.navlinks li a{
-    text-decoration: none;
-    color: black;
+.navlinks li a {
+  text-decoration: none;
+  color: black;
 }
-@media  screen and (min-width:480px ){
-.navlinks button{
-    display:none;
-}
+@media screen and (min-width: 480px) {
+  .navlinks button {
+    display: none;
+  }
 }
 
 /* Home Styling */
 .home {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
-article{
-    max-width: 80%;
-    text-align: center;
-    align-items: center;
-    margin: 100px 0 100px 0;
-    font-size: 1.2rem;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+article {
+  max-width: 80%;
+  text-align: center;
+  align-items: center;
+  margin: 100px 0 100px 0;
+  font-size: 1.2rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-.home-image{
-    padding: 15px;
-    width: 100%;
-    
+.home-image {
+  padding: 15px;
+  width: 100%;
 }
-.home-image img{
-    width: 80%;
+.home-image img {
+  width: 80%;
 }
-.homepage{
-    max-width:900px ;
-    margin: auto;
-
-
+.homepage {
+  max-width: 900px;
+  margin: auto;
 }
 
 /* Footer Styling */
 
-.footer{
-    position: relative;
-    top:250px;
-    text-align: center;
-    
+.footer {
+  position: relative;
+  top: 250px;
+  text-align: center;
 }
-.footer a{
-    text-decoration: none;
-    font-size: 1.1rem;
-    margin: 0 5px 10px 10px;
-
+.footer a {
+  text-decoration: none;
+  font-size: 1.1rem;
+  margin: 0 5px 10px 10px;
 }
 /* Phone Styling */
-@media  screen and (max-width:480px ) {
-    .projects-card {
-        display: grid;
-        grid-template-columns:  1fr ;
-       
-       }
-    .home {
+@media screen and (max-width: 480px) {
+  .projects-card {
     display: grid;
-    grid-template-columns: 1fr ;
-    
-}
-article{
+    grid-template-columns: 1fr;
+  }
+  .home {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  article {
     max-width: 100%;
     text-align: center;
     align-items: center;
     margin: 20px;
     font-size: 1rem;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  }
 
-.footer{
+  .footer {
     position: relative;
-    top:80px;
+    top: 80px;
     text-align: center;
-    
-}
-.home-image img{
+  }
+  .home-image img {
     width: 100%;
-}
-.writing-page{
+  }
+  .writing-page {
     text-align: center;
     font-size: 1rem;
-    margin:30px;
-   
-}
-
+    margin: 30px;
+  }
 }
 
 /* 
 Writing Styling */
-.writing{
-    max-width:900px ;
-    margin: auto;
+.writing {
+  max-width: 900px;
+  margin: auto;
+}
+.writing-page {
+  text-align: center;
+  font-size: 1.2rem;
+}
+.writing-cards {
+  box-sizing: border-box;
+  height: 300px;
+  width: 300px;
+  margin: auto;
+  margin-top: 80px;
 
+  box-shadow: 5px 5px 5px 5px #888888;
 }
-.writing-page{
-    text-align: center;
-    font-size: 1.2rem;
-   
+.writing-cards h1,
+p {
+  position: relative;
+  top: 50px;
 }
-.writing-cards{
-    box-sizing: border-box;
-    height: 300px;
-    width: 300px;
-    margin: auto;
-    margin-top: 80px;
-  
-    box-shadow: 5px 5px 5px 5px #888888;
+.writing-cards a {
+  text-decoration: none;
+  color: black;
 }
-.writing-cards h1, p{
-    position: relative;
-    top: 50px;
+/* Poetry Styling */
+.poetry {
+  max-width: 900px;
+  margin: auto;
 }
-.writing-cards a{
-    text-decoration: none;
-    color: black;
-}
- /* Poetry Styling */
- .poetry{
-    max-width:900px;
-    margin: auto;
- }
 
- .poem{
-    text-align: center; 
-   
-    width: 250px;
- }
- .poem h1{
-     margin: 50px auto 0px auto;
-     text-decoration: underline;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.poem {
+  text-align: center;
 
- }
-.poem p{
-    margin-top: 0;
+  width: 250px;
+}
+.poem h1 {
+  margin: 50px auto 0px auto;
+  text-decoration: underline;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+.poem p {
+  margin-top: 0;
 }
 /* Developing Styling */
-.developing{
-    max-width:900px ;
-    margin: auto;
+.developing {
+  max-width: 900px;
+  margin: auto;
 }
-.projects{
-    text-align: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin-top: 50px;
+.projects {
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin-top: 50px;
 }
-.projects-card{
- display: grid;
- grid-template-columns:  1fr;
+.projects-card {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
-hr{
-    border-top: 3px double green;
+hr {
+  border-top: 3px double green;
 }
-img{
-    width: 90%;
-    margin: 10px;
-  
+img {
+  width: 300px;
+  margin: 10px;
+}
+a {
+  text-decoration: none;
+  color: "green";
+}
+a:visited {
+  color: "green";
 }
 
 /* Contact Styling */
-.contact{
-    max-width:900px ;
-    margin: auto;
+.contact {
+  max-width: 900px;
+  margin: auto;
 }
-.contact-card{
-    display: grid;
-    justify-items: center;
-    /* box-shadow: 2px 2px 2px 2px #888888; */
+.contact-card {
+  display: grid;
+  justify-items: center;
+  /* box-shadow: 2px 2px 2px 2px #888888; */
 }
-.contact-form{
-    display: grid;
-    width: 50%;
-    margin-top: 30px
- 
-    
+.contact-form {
+  display: grid;
+  width: 50%;
+  margin-top: 30px;
 }
-.contact-form input{
-    height: 30px;
-    padding: 10px;
-    border-style: none;
-    margin: 20px 0 20px 0;
-    outline: none;
-    box-shadow: 2px 2px 2px 2px #888888;
+.contact-form input {
+  height: 30px;
+  padding: 10px;
+  border-style: none;
+  margin: 20px 0 20px 0;
+  outline: none;
+  box-shadow: 2px 2px 2px 2px #888888;
 }
 
-.text-area{
-    height: 80px;
+.text-area {
+  height: 80px;
 }
-.btn-contact{
-    width: 30%;
-    background-color: green;
-    color:honeydew;
-    border-style: none;
-    font-size: 1rem;
-    padding: 5px;
+.btn-contact {
+  width: 30%;
+  background-color: green;
+  color: honeydew;
+  border-style: none;
+  font-size: 1rem;
+  padding: 5px;
 }
-label{
-    font-size: 1.2rem;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+label {
+  font-size: 1.2rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
