--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -38,10 +38,11 @@
   grid-template-columns: 1fr 1fr;
 }
 article {
-  max-width: 80%;
+  max-width: 70%;
   text-align: center;
   align-items: center;
   margin: 100px 0 100px 0;
+  padding: 20px;
   font-size: 1.2rem;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -51,7 +52,8 @@ article {
   width: 100%;
 }
 .home-image img {
-  width: 80%;
+  width: 100%;
+  height: 100%;
 }
 .homepage {
   max-width: 900px;
@@ -67,7 +69,8 @@ article {
 }
 .footer a {
   text-decoration: none;
-  font-size: 1.1rem;
+  color: green;
+  font-size: 1.5rem;
   margin: 0 5px 10px 10px;
 }
 /* Phone Styling */
