--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -26,11 +26,11 @@
   text-decoration: none;
   color: black;
 }
-@media screen and (min-width: 480px) {
+/* @media screen and (min-width: 480px) {
   .navlinks button {
     display: none;
   }
-}
+} */
 
 /* Home Styling */
 .home {
@@ -92,10 +92,14 @@ article {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   }
+  .navlinks li a {
+    font-size: 12px;
+  }
 
   .footer {
     position: relative;
-    top: 80px;
+    top: 100px;
+    margin: 10px;
     text-align: center;
   }
   .home-image img {
