--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -73,15 +73,43 @@ article {
   font-size: 1.5rem;
   margin: 0 5px 10px 10px;
 }
+@media screen and (min-width: 480px) {
+  .poetry-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .poetry-content img {
+    width: 90%;
+    margin-top: 40px;
+    height: 90%;
+  }
+  .poetry-content p {
+    width: 50%;
+    letter-spacing: 1px;
+  }
+}
 /* Phone Styling */
 @media screen and (max-width: 480px) {
   .projects-card {
     display: grid;
     grid-template-columns: 1fr;
   }
+  .projects-card img {
+    width: 100%;
+  }
+  .projects-description {
+    width: 100%;
+    padding: 10px;
+    margin: 10px;
+  }
   .home {
     display: grid;
     grid-template-columns: 1fr;
+  }
+  .homepage {
+    max-width: 350px;
+    margin: auto;
+    margin-left: 0;
   }
   article {
     max-width: 100%;
@@ -110,6 +138,13 @@ article {
     font-size: 1rem;
     margin: 30px;
   }
+  /* .poetry-content {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .poetry-content img {
+  } */
 }
 
 /* 
@@ -152,13 +187,30 @@ p {
   width: 250px;
 }
 .poem h1 {
-  margin: 50px auto 0px auto;
+  margin: 50px auto 20px auto;
   text-decoration: underline;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 .poem p {
   margin-top: 0;
+}
+.poetry-content {
+  display: grid;
+  grid-template-columns: 1fr;
+
+  margin-left: 50px;
+}
+.poetry-content img {
+  width: 80%;
+  margin-top: 40px;
+  height: 90%;
+}
+.poetry-content p {
+  width: 100%;
+  letter-spacing: 1px;
+
+  margin-left: -30px;
 }
 /* Developing Styling */
 .developing {
