--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -264,7 +264,8 @@ a:visited {
   border-style: none;
   margin: 20px 0 20px 0;
   outline: none;
-  color: whitesmoke;
+  box-shadow: 2px 2px 2px 2px #888888; 
+} 
 }
 
 .text-area {
